--- a/faq/support-community/where-to-get-help.mdx
+++ b/faq/support-community/where-to-get-help.mdx
@@ -1,124 +1,116 @@
 ---
-title: "Where to Get More Help"
-description: "Points users toward community forums, issue trackers, and other support options for additional assistance beyond the documentation."
+title: "Where can I find help and support?"
+description: "Lists official support channels, documentation links, bug trackers, and tips for asking good questions or reporting issues. Points to community-created docs, mailing lists, and related tools."
 ---
 
-# Where to Get More Help
+# Where can I find help and support?
 
-As you explore and work with GoogleTest and GoogleMock, you may find occasions when you need additional help beyond what this documentation offers. Whether you are troubleshooting tricky issues, looking for usage examples, or want to tap into community wisdom, this page directs you to relevant support channels and resources.
-
----
-
-## Community Forums and Discussion Groups
-
-GoogleTest benefits from a vibrant open-source community of C++ developers who actively discuss issues, share tips, and provide guidance.
-
-- **GitHub Discussions**: The main GoogleTest repository on GitHub hosts a Discussions area where users ask questions and share solutions. This is the best place for general usage queries and community-driven support.
-
-- **Stack Overflow**: Use the tag [`googletest`](https://stackoverflow.com/questions/tagged/googletest) to search for existing questions or ask your own related to GoogleTest and GoogleMock. Tagging your question with relevant keywords like `gmock` or `cpp-testing` helps attract knowledgeable answers.
-
-- **Google Groups / Mailing Lists**: Occasionally, dedicated developer mailing lists or Google Groups may have active discussions. Check the project’s GitHub or official site for links or pointers.
-
-
-## Issue Tracker and Bug Reports
-
-When you encounter bugs, unexpected behavior, or missing features, the **GitHub Issue Tracker** is the official venue to report them.
-
-- Visit the [GoogleTest GitHub Issues page](https://github.com/google/googletest/issues) to:
-  - Check if the issue has already been reported or addressed.
-  - Submit a detailed bug report including reproduction steps and environment details.
-
-Following the repository’s issue guidelines helps maintainers understand and prioritize problems efficiently.
-
-
-## Support from the Documentation
-
-Our documentation provides a rich array of resources that often answer common questions:
-
-- **Primer and Getting Started Guides**: Step-by-step tutorials to get your tests running.
-- **Mocking Guides and Cookbook**: Extensive examples, best practices, and advanced mocking patterns.
-- **FAQ Pages**: Solutions to frequent issues, troubleshooting tips, and usage clarifications.
-- **API Reference**: Detailed descriptions of macros, classes, and functions.
-
-If you haven’t yet, be sure to explore these pages for self-help.
-
-
-## External Resources and Tutorials
-
-Several community members have contributed additional tutorials, walkthroughs, and insights:
-
-- [Community-Created Documentation](https://github.com/google/googletest/blob/main/docs/community_created_documentation.md) provides links to curated external guides.
-- Blogs, videos, and conference talks on testing with GoogleTest/gMock enrich practical understanding.
-
-
-## Getting Professional Help
-
-While GoogleTest is open source and free, some organizations rely on internal experts or third-party consultants for commercial support. Consider leveraging internal expertise if available.
-
+This page gathers all official and community resources to help you get support, find documentation, report bugs, and participate in the GoogleTest and GoogleMock ecosystem. It is your starting point whenever you need assistance, want to deepen your knowledge, or contribute.
 
 ---
 
-## Best Practices for Seeking Help
+## Official Support Channels
 
-When reaching out on forums or issue trackers:
+### 1. Documentation
 
-- Be clear and concise about your problem.
-- Include minimal reproducible code snippets.
-- Specify your development environment (OS, compiler, GoogleTest version).
-- Describe what you have already tried.
-- Link to relevant documentation or prior discussions.
+- **GoogleTest User's Guide**: The central documentation with comprehensive instructions on usage, test writing, assertions, and integration.
+  - Access the guide here: [GoogleTest User's Guide](https://github.com/google/googletest/blob/main/docs/index.md)
+- **GoogleMock Documentation**: Extensive reference and guides for mocking classes, setting expectations, and using actions.
+  - Key resources:
+    - [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+    - [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
+    - [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+    - [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
 
-This approach increases your chances of getting fast and accurate assistance.
+### 2. Source Code and Bug Tracking
 
+- **GitHub Repository**: 
+  - Primary source for code, issues, and contributions is the [GoogleTest GitHub Repository](https://github.com/google/googletest).
+  - Use the Issues tab to report bugs or request features, providing detailed descriptions and reproduction steps.
+
+### 3. Mailing Lists and Groups
+
+- While GoogleTest doesn’t have a dedicated official mailing list, developer discussions typically occur on external forums and developer communities such as:
+  - Stack Overflow tagging [`googletest`](https://stackoverflow.com/questions/tagged/googletest)
+  - GitHub Discussions or Issues
+
+### 4. FAQs and Troubleshooting
+
+- **Frequently Asked Questions (FAQs)**: Address common questions on installation, mocks, build issues, and usage patterns.
+  - Main FAQ: [GoogleTest FAQ](https://github.com/google/googletest/tree/main/docs/faq)
+  - Mocking-specific FAQ: [gMock FAQ](https://google.github.io/googletest/gmock_faq.html)
+
+---
+
+## Community-Created Resources
+
+### 1. Community Tutorials and Examples
+
+- Many users and teams have authored tutorials, samples, and best practices that complement official docs.
+- Search for blog posts, videos, and presentations with terms like "GoogleTest tutorial" or "gMock examples".
+
+### 2. Stack Overflow
+
+- This is a valuable resource for real-world issues, workarounds, and discussions.
+- Be sure to tag questions with both `googletest` and `gmock` as applicable.
+
+### 3. GitHub Examples
+
+- The `googletest` repo contains [sample tests](https://github.com/google/googletest/tree/main/googletest/samples) demonstrating basic to advanced usage.
+
+---
+
+## Tips for Asking Good Questions or Reporting Issues
+
+To get the most effective help from the community or maintainers, follow these guidelines:
+
+- **Search First**: Consult existing issues and FAQ pages before posting.
+- **Provide Context**: Include your GoogleTest/GoogleMock version (e.g., v1.17.0 or main branch), platform, and compiler details.
+- **Minimal Reproducible Example**: Supply a small, complete code snippet that replicates the issue.
+- **Describe Expected vs Actual Behavior**: Clearly explain what you expected to happen and what actually happened.
+- **Include Error Messages and Logs**: Share the full output, stack trace, or error code.
+- **Use Correct Tags and Titles**: Tag bug reports and questions accurately for visibility.
+
+---
+
+## Related Documentation and Support Links
+
+- [Getting Started with GoogleTest and GoogleMock](https://github.com/google/googletest/tree/main/docs/getting-started) — Installation, first tests, and configuration
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) — Fundamental concepts and writing tests
+- [Assertion Macros Reference](https://github.com/google/googletest/blob/main/docs/reference/assertions.md) — Learn assertion usage
+- [Mock Object Creation & Usage](https://github.com/google/googletest/blob/main/docs/api_reference/mocking_apis/mock_object_basics.md) — Details on defining mocks
+- [Building and Integration Patterns](https://github.com/google/googletest/blob/main/docs/concepts/integration-security-scalability/build-and-integration-models.md) — Usage within different build systems
+- [Troubleshooting Common Issues](https://github.com/google/googletest/blob/main/docs/guides/integration-and-real-world-scenarios/troubleshooting-common-issues.md)
 
 ---
 
 ## Summary
 
-This page guides you to:
+This page centralizes your paths to help and support for GoogleTest and GoogleMock. Whether you are installing, writing your first test, troubleshooting, or contributing, these resources provide the knowledge and communities necessary for success.
 
-- Community forums like GitHub Discussions and Stack Overflow for conversational support.
-- The official GitHub Issue Tracker for bug reports.
-- Rich project documentation for tutorials and reference.
-- Community contributed external resources.
-- Tips on effective help-seeking.
+Use the official guides to establish a strong foundation, consult FAQs and issues for typical problems, and leverage community forums and examples for practical, hands-on guidance.
 
-Use these resources in combination to accelerate learning and resolve problems effectively.
-
+Keep your questions clear, detailed, and reproducible when reaching out for help to receive efficient, expert assistance.
 
 ---
 
-### Related Documentation
-
-- [Mocking for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Legacy gMock FAQ](https://google.github.io/googletest/gmock_faq.html)
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
-- [Installation Guide](https://google.github.io/googletest/setup.html)
-- [API Reference](https://google.github.io/googletest/reference.html)
-
-
----
-
-### Quick Links
+## Quick Links
 
 - [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [GoogleTest Issue Tracker](https://github.com/google/googletest/issues)
-- [GoogleTest Discussions](https://github.com/google/googletest/discussions)
+- [GoogleTest User's Guide](https://github.com/google/googletest/blob/main/docs/index.md)
+- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [GoogleTest FAQ](https://github.com/google/googletest/tree/main/docs/faq)
 - [Stack Overflow `googletest` tag](https://stackoverflow.com/questions/tagged/googletest)
-- [Community-Created Documentation](https://github.com/google/googletest/blob/main/docs/community_created_documentation.md)
-
+- [GoogleTest Sample Tests](https://github.com/google/googletest/tree/main/googletest/samples)
 
 ---
 
-<Tip>
-When posting for help, always include detailed code snippets and environment info. Good questions get better answers faster!
-</Tip>
-
-<Note>
-GoogleTest and GoogleMock are actively maintained by contributors worldwide; reporting issues or contributing fixes helps the whole community.
-</Note>
-
-<Info>
-Participate in discussions and track ongoing developments via the repository Discussions page to stay updated on GoogleTest enhancements.
-</Info>
+<Callouts>
+  <Tip>
+    When reporting bugs or asking detailed questions, using a minimal reproducible example is essential. This ensures your problem can be understood and addressed efficiently.
+  </Tip>
+  <Note>
+    GoogleTest and GoogleMock documentation, FAQs, and examples are continually updated. Always check you are referencing the latest version aligned with your installed release.
+  </Note>
+</Callouts>
