--- a/changelog/upgrade-guidance/breaking-changes.mdx
+++ b/changelog/upgrade-guidance/breaking-changes.mdx
@@ -1,125 +1,236 @@
 ---
-title: "Breaking Changes and Migration Notes"
-description: "Detail all API, behavior, or compatibility changes that can impact existing test code. Concisely enumerate what was removed, changed, or is no longer supported, and provide migration instructions or workarounds as needed."
+title: "Breaking Changes and Migrations"
+description: "A clear summary of any breaking changes introduced in recent versions, with concise migration instructions and references to affected features or files. Essential for teams upgrading across major versions."
 ---
 
-# Breaking Changes and Migration Notes
+# Breaking Changes and Migrations
 
-This page outlines critical API, behavior, and compatibility changes in GoogleTest that may affect existing test code. It consolidates all breaking changes introduced across versions, explains what has been removed or changed, and provides clear migration guidance to help developers update their tests efficiently and avoid disruptions.
-
----
-
-## 1. API Changes
-
-### Removal and Deprecation of Legacy APIs
-- The older `TestCase` API and related macros are deprecated and replaced by `TestSuite` and updated naming conventions.
-- Macros such as `INSTANTIATE_TEST_CASE_P` and `TYPED_TEST_CASE_P` are deprecated in favor of `INSTANTIATE_TEST_SUITE_P` and `TYPED_TEST_SUITE_P`. Use the newer macros to avoid warnings and ensure future compatibility.
-
-### Changes in Test Fixture Naming and Registration
-- Test fixtures must now conform strictly to having a unique default constructor or explicitly define one to avoid registration errors.
-- GoogleTest requires all tests in the same test suite to use the same test fixture class. Mixing `TEST` and `TEST_F` within one suite will generate failures. Refactor tests to maintain fixture-class consistency.
-
-### Enhanced Strictness in Test Name and Suite Naming Conventions
-- Test suite and test names should avoid underscores (`_`) due to reserved internal naming. This prevents name collisions and linker errors.
-- Avoid starting or ending test names with underscores and do not use double underscores anywhere in names.
-
-## 2. Behavioral Changes
-
-### Fatal Failure Propagation and Test Flow
-- Assertion macros that generate fatal failures (`ASSERT_*` and `FAIL()`) abort the current function only, not the entire test. Users should use helper macros like `ASSERT_NO_FATAL_FAILURE()` or check `HasFatalFailure()` to propagate failures properly.
-- `GTEST_SKIP()` introduced for conditionally skipping tests at runtime in test cases and environments.
-
-### Repetition and Shuffling of Tests
-- The `--gtest_repeat` flag now supports negative counts for infinite test repetitions.
-- Shuffling of tests via `--gtest_shuffle` randomizes test and test suite order, while still ensuring death tests run first.
-
-### Death Tests Execution
-- Death tests must be grouped in test suites named with the suffix `DeathTest` to guarantee orderly execution before non-death tests.
-- New `death_test_style` flag (`fast` vs `threadsafe`) governs death test behavior, impacting process spawning and thread safety.
-
-## 3. Compatibility and Platform Support
-
-### Minimum C++ Standard
-- Starting with version 1.17.0, GoogleTest requires a minimum of C++17 standard. Users must upgrade compiler settings accordingly.
-
-### Platform and Compiler Support
-- Some platform-specific behaviors changed to improve consistency and stability, such as avoiding pop-up dialogs on Windows during assertion failures.
-
-### Exception Handling
-- When exceptions are enabled, GoogleTest respects catching and reporting them as test failures. Toggle this behavior with `--gtest_catch_exceptions`.
-
-## 4. Migration Instructions
-
-### Transitioning from Deprecated Macros
-- Replace `INSTANTIATE_TEST_CASE_P` with `INSTANTIATE_TEST_SUITE_P`.
-- Replace `TYPED_TEST_CASE` and `TYPED_TEST_CASE_P` with `TYPED_TEST_SUITE` and `TYPED_TEST_SUITE_P`.
-
-### Updating Test Naming
-- Remove or avoid underscores in test and suite names to prevent conflicts.
-- If mixing `TEST` and `TEST_F` in the same suite, separate tests into distinct suites or unify their fixtures.
-
-### Handling Test Fixture Constructors
-- If your fixture has only non-default constructors, add a default constructor to enable GoogleTest's automatic creation.
-- Avoid fatal assertions in constructors or destructors; use `SetUp()`/`TearDown()` methods for test preparation and cleanup instead.
-
-### Adjustments for Death Tests
-- Name death test suites with the `DeathTest` suffix for proper ordering.
-- For thread-safety, consider using the `threadsafe` death test style flag.
-
-## 5. Common Pitfalls and Remediation
-
-- Failing to use the return value of `RUN_ALL_TESTS()` leads to incorrect test result reporting.
-- Using assertions in non-void-returning functions must be done carefully, avoiding fatal assertions in such contexts.
-- Mixing test fixtures inadvertently can cause runtime failures with confusing error messages.
-- Death tests run in sub-processes; state changes do not propagate back to the parent process.
-
-## 6. Examples
-
-### Migrating Deprecated Macros
-
-```cpp
-// Old
-INSTANTIATE_TEST_CASE_P(MyPrefix, MyTestSuite, ::testing::Values(1,2,3));
-// New
-INSTANTIATE_TEST_SUITE_P(MyPrefix, MyTestSuite, ::testing::Values(1,2,3));
-```
-
-### Proper Test Naming
-
-```cpp
-// Avoid underscores in names
-TEST(MyTestSuite, HandlesSimpleCase) { ... }
-
-// Separate death test suites
-class FooTest : public ::testing::Test { ... };
-using FooDeathTest = FooTest;
-
-TEST_F(FooDeathTest, FailsCorrectly) { ASSERT_DEATH(...); }
-```
-
-### Handling Fatal Failures in Subroutines
-
-```cpp
-void Helper() {
-  ASSERT_TRUE(SomeCondition());
-  // Further code - will be skipped if assertion fails
-}
-
-TEST(MyTest, UsesHelper) {
-  Helper();
-  if (HasFatalFailure()) return;  // Abort test due to fatal failure in Helper
-  ...
-}
-```
-
-## 7. References and Related Documentation
-
-- [Version Timeline and Major Releases](version-timeline)
-- [Notable Features and Improvements](notable-features)
-- [Upgrade Guides and Best Practices](upgrade-instructions)
-- [API Reference - Test Definition & Lifecycle](api-reference/core-test-api/test-definition-and-lifecycle)
-- [Advanced Guide - Migrating Existing Tests](guides/getting-started/migrating-existing-tests)
+GoogleTest evolves with enhancements and improvements that sometimes introduce breaking changes. This page clearly summarizes any such breaking changes introduced in recent major releases, along with concise migration instructions to guide your upgrade process. It is essential reading for teams planning to upgrade across major versions to maintain a smooth testing environment.
 
 ---
 
-This page empowers developers to confidently upgrade to newer GoogleTest versions while preserving test stability and taking advantage of improved features. Ensure you read the linked upgrade guides and best practices to fully leverage the framework’s advances without regressions.
+## What Is Covered Here
+
+This page focuses exclusively on changes that may impact existing user tests and mocks written with GoogleTest and GoogleMock. It highlights:
+
+- Breaking changes affecting core macros, APIs, or behaviors in GoogleTest and GoogleMock
+- Required code or test changes for a successful migration
+- Deprecated features with removal timelines
+- References to affected headers, macros, or test patterns
+
+---
+
+## Understanding Breaking Changes
+
+### Why Breaking Changes Happen
+
+Breaking changes are sometimes necessary for:
+
+- Improving API clarity or usability
+- Correcting long-standing issues or bugs
+- Enhancing safety and correctness guarantees
+- Removing rarely used or obsolete features
+
+### Identifying Breaking Changes
+
+Typical signs that a change is breaking:
+
+- Public APIs or macro signatures have changed
+- Behavioral changes that affect test outcomes or mock verifications
+- Removed or renamed macros or classes
+- Changes in default settings that alter test execution flow
+
+---
+
+## Migration Basics
+
+To migrate across major versions with breaking changes, you should:
+
+1. **Review the breaking changes listed here** carefully for the versions you are upgrading to
+2. **Update your test mocks and test code** as recommended
+3. **Run your full test suite** to identify incompatibilities and verify fixes
+4. **Consult additional migration guides or upgrade checklists** as needed
+
+---
+
+## Notable Breaking Changes in Recent Versions
+
+### MOCK_METHOD Macro Redesign
+
+GoogleTest unified and modernized mock method declarations by introducing the generic `MOCK_METHOD` macro, replacing the old `MOCK_METHODn` family:
+
+- Old style: `MOCK_METHOD1(Foo, bool(int))`
+- New style: `MOCK_METHOD(bool, Foo, (int))`
+
+**Impact:**
+
+- Migration requires updating mock class definitions to the new macro syntax
+- Changes the order and grouping of parameters
+- Supports richer qualifiers like `const`, `override`, `noexcept`, and calling conventions
+
+**Migration Tip:** Use parentheses around return types or argument types containing commas, e.g.,
+
+```cpp
+MOCK_METHOD((std::pair<int, bool>), GetPair, ());
+MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
+```
+
+See the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md#MOCK_METHOD) and [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#mocking-classes) for detailed migration examples.
+
+---
+
+### Const and Overloaded Method Handling in Mocks
+
+- GoogleMock now requires explicit use of `(const)` qualifier in `MOCK_METHOD` for const methods.
+- Overloaded methods must all be mocked using the new macro and can require use of `Const()` wrapper in expectations for const overload disambiguation.
+
+**Impact:**
+
+- Ensure all overloaded methods are mocked.
+- Use `Const()` wrappers to make expectations explicit.
+
+Example:
+
+```cpp
+EXPECT_CALL(Const(mock_foo), GetBar()).WillOnce(ReturnRef(bar));
+```
+
+See [Mocking Reference - SelectOverload](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#selecting-between-overloaded-functions) for details.
+
+---
+
+### Uninteresting vs Unexpected Calls Behavior
+
+GoogleMock clearly distinguishes:
+
+- *Uninteresting calls*: Methods with **no** `EXPECT_CALL` but invoked. Causes warnings by default.
+- *Unexpected calls*: Calls that don't match any existing `EXPECT_CALL`. Always an error.
+
+**Change:**
+
+- Added facilities like `NiceMock<T>` and `StrictMock<T>` to customize whether warnings are shown or treated as errors for uninteresting calls.
+
+**Impact:**
+
+- Migrate uninteresting call warnings by wrapping mocks in `NiceMock` or `StrictMock` as needed.
+- Avoid blindly adding `EXPECT_CALL` to silence warnings.
+
+See [gMock Cookbook - The Nice, the Strict, and the Naggy](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#the-nice-the-strict-and-the-naggy) for best practices.
+
+---
+
+### Actions and Matchers Enhancements
+
+Improvements to actions and matchers might cause minor incompatibilities:
+
+- `EXPECT_CALL` now infers cardinalities differently when `WillOnce`/`WillRepeatedly` are used.
+- Parameterized matchers and actions now require careful attention to typing and ownership to avoid compile errors.
+
+**Impact:**
+
+- Review and adapt actions using lambdas or functors to match new expectations.
+- When using `Return()` with move-only types, prefer lambdas or `ReturnPointee()` for safety.
+
+See [gMock Cookbook - Using Actions](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#using-actions) and [Creating and Using Mocks](https://github.com/google/googletest/blob/main/guides/mocking-and-advanced-techniques/creating-and-using-mocks.md).
+
+---
+
+### Verifying and Clearing Mocks
+
+- Added new APIs `Mock::VerifyAndClearExpectations` and `Mock::VerifyAndClear` to verify and clear expectations explicitly.
+
+**Impact:**
+
+- You can now force verification before destruction to detect silent failures.
+
+```cpp
+ASSERT_TRUE(Mock::VerifyAndClearExpectations(&mock_object));
+```
+
+See [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md#classes) for details.
+
+---
+
+### Deprecated and Removed Features
+
+- The old `MOCK_METHODn` macros are deprecated although still supported, and will be removed in future releases. Migrate to the unified `MOCK_METHOD` macro.
+- Deprecated named flags or behaviors may be removed.
+
+---
+
+## Common Migration Pitfalls and Solutions
+
+### Compilation Failures from Changed Macro Signatures
+
+Ensure your mock method declarations are updated and correct, especially with:
+
+- Correct parentheses around types with commas
+- Proper qualifier order (e.g., `(const, override)`)
+
+### Ambiguous Calls to Overloaded Methods
+
+Use `Const()` to disambiguate const methods in expectations.
+
+### Unintended Mock Behavior due to Missing Expectations
+
+Uninteresting call warnings alert you to missing expectations or unexpected calls. Use `NiceMock` or add catch-all expectations carefully.
+
+### Problems with Move-Only Types
+
+Use lambdas with `WillOnce` or `WillRepeatedly` to provide fresh objects on each call.
+
+---
+
+## Step-by-Step Migration Workflow
+
+<Steps>
+<Step title="Prepare">
+Review the GoogleTest release notes and breaking changes documented here for your target version.
+</Step>
+<Step title="Update Mock Classes">
+Convert `MOCK_METHODn` macros to the new `MOCK_METHOD` macro syntax;
+add explicit `const` and other qualifiers as needed.
+</Step>
+<Step title="Fix Test Expectations">
+Adjust your `EXPECT_CALL` and `ON_CALL` statements, using `Const()` for const overloads
+and adding catch-all expectations for uninteresting calls.
+</Step>
+<Step title="Fix Actions and Matchers">
+Review all custom and complex actions/matchers;
+update lambdas and functors as per new recommended patterns.
+</Step>
+<Step title="Run and Debug">
+Run your full test suite with `--gmock_verbose=info` to check for warnings or failures;
+address them before proceeding.
+</Step>
+<Step title="Finalize">
+Add `Mock::VerifyAndClearExpectations()` calls in tests where mock lifetime is non-trivial.
+</Step>
+</Steps>
+
+---
+
+## Troubleshooting Tips
+
+- When a mock method seems not mocked, confirm it is declared `virtual` and overridden with `MOCK_METHOD`.
+- Use `--gmock_verbose=info` to get detailed expectation matching information.
+- Check for missing virtual destructors in interfaces to avoid object lifecycle issues.
+- Ensure expectations are set before the mock method is called.
+- For move-only types, ensure actions create fresh objects on each call.
+
+---
+
+## Additional Resources
+
+- [Migration Checklist](./upgrade-checklist)
+- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
+- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
+- [Breaking Changes and Removals](./deprecations)
+
+---
+
+## Summary
+
+This page provides a focused, user-centric summary of breaking changes and migrations specific to GoogleTest and GoogleMock. It empowers users to upgrade safely by highlighting critical API shifts, updated macro usage, behavior changes, and strategies to maintain test stability and accuracy.
+
+---
